tests/paczka1/fuzzy1/92294595.err
Error in line 3: rAse0QfPAWS A605 24,5
Error in line 9: BWA A605 71,5
Error in line 12: rAse0QfPAWS A216 20,9
Error in line 26: eEcuKrDDrrn A216 1,91
